--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
-.App {
-  text-align: center;
+.detail-card {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 700px;
+  height: 350px;
+  position: relative;
+  color: #2d2d2d;
+  background-color: #b2e5e6;
+  letter-spacing: 1px;
+  border: 25px solid #a0cdcf;
+  border-radius: 25px;
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  margin: auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.detail-card .card-description {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 20px;
+  padding: 40px;
+  width: auto;
+  height: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.detail-card .card-description .card-description-title {
+  color: black;
+  font-size: 18px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.detail-card .card-description .card-description-profession {
+  display: block;
+  font-size: 16px;
+}
+
+.detail-card .card-description .card-description-company {
+  display: block;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.detail-card .card-description .card-description-company:hover {
+  text-decoration: underline;
+}
+
+.detail-card.card-description .card-description-social {
+  position: absolute;
+  bottom: 40px;
+}
+
+.detail-card .card-description .card-description-social .card-description-social-follow {
+  display: block;
+  margin-bottom: 8px;
+  color: #555572;
+  font-size: 14px;
+}
+
+.detail-card .card-image {
+  width: 250px;
+  height: 100%;
+  object-fit: cover;
+}
+
+.error-message{
+  color: red;
+  font-size: 12px;
+  padding-top: 5px;
 }
